# llama-mcp-server

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: engine.rs  http.rs  main.rs  mcp.rs
